--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <link rel='stylesheet' href='./style.css'>
+</head>
+<body>
+    <h1>Hello, I'm Melissa. An ambitious and fun full stack web developer.</h1>
+</body>
+</html>
