--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <link rel='stylesheet' href='./style.css'>
 </head>
 <body>
-    <h1>Hello, I'm Melissa. An ambitious and fun full stack web developer.</h1>
+    <h1>Hello, I'm Melissa! An ambitious and fun full stack web developer.</h1>
 </body>
 </html>
