--- a/index.html
+++ b/index.html
@@ -1,13 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Melissa's Portfolio</title>
     <link rel='stylesheet' href='./style.css'>
+    <link href="https://fonts.googleapis.com/css?family=Asap" rel="stylesheet">
 </head>
+
 <body>
-    <h1>Hello, I'm Melissa! An ambitious and fun full stack web developer.</h1>
+
+    <nav class="nav">
+        <img src="./M_Logo.png" alt="" id='image'>
+        <ul>
+            <li>Projects</li>
+            <li>Contact</li>
+        </ul>
+    </nav>
+    <section class="header">
+        <h1>Hello, I'm Melissa! An ambitious and fun full stack web developer.</h1>
+    </section>
+    <div class="top-row">
+
+        <div id="first-box">Box 1
+            <img id="tea-tree" src='./images/Screen Shot 2019-01-11 at 9.52.27 PM.png'>
+        </div>
+        <div id="second-box">Box 2</div>
+    </div>
+    <div class="bottom-row">
+        <div id="third-box">Box 3</div>
+        <div id="fourth-box">Box 4</div>
+    </div>
+    <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem molestiae deleniti illum doloremque
+        voluptatum dolorem soluta qui libero velit eius minima voluptas possimus non alias reiciendis a quam, ducimus
+        repudiandae?
+        Fuga quidem eum delectus obcaecati aut accusamus, tenetur nobis tempora, quis vel quaerat incidunt repellat,
+        nesciunt vitae aliquam iusto? Autem consequatur commodi nisi reprehenderit voluptas minima enim quis cupiditate
+        ipsam?
+        Nisi, soluta! Iusto hic magnam dolores natus distinctio at nobis provident totam tempore exercitationem.
+        Accusamus assumenda odio, molestias culpa porro magnam reiciendis repellat qui vero, cumque, fugiat dicta
+        aspernatur impedit!
+        Dolorum ab, similique architecto perspiciatis deleniti voluptatem vitae omnis fugit tempore ex fuga ipsum
+        nihil! Laborum impedit temporibus porro soluta, qui sit fuga aliquam laudantium eum! Eaque sunt deleniti
+        veritatis.
+        Nulla in quos veniam laborum, nesciunt suscipit magni fuga beatae. Modi eligendi dolorem ex animi corporis
+        officiis distinctio quas. Porro iste ullam fugit iusto magnam doloribus error dolorem reprehenderit. Nesciunt?
+        Incidunt, ullam recusandae officia fuga explicabo, ad impedit laborum, provident reiciendis quaerat dolore
+        reprehenderit nihil aliquid voluptate repellat veniam deserunt tempore non quo cumque? Eligendi fuga quos iusto
+        officia illum.
+        Nihil corrupti, voluptate adipisci odio amet eveniet ad veritatis rerum? Delectus excepturi praesentium nihil,
+        amet nulla repellat earum fugit error voluptatibus. Recusandae, error provident porro ab cumque ducimus
+        pariatur dignissimos?
+        Reprehenderit alias ipsa veritatis dolorem, nisi amet doloribus rem vel quasi quia in praesentium ratione dolor
+        enim reiciendis, officiis corporis voluptatum itaque? Nesciunt cumque, deleniti illum error quibusdam
+        perferendis tempore.
+        Vero unde fugiat delectus dolore quae possimus, autem maxime at beatae totam doloremque nulla quam. Nam
+        reiciendis ipsum facere repellat voluptatem corporis velit ullam, fuga praesentium deleniti! Nesciunt, ut hic!
+        Aut voluptas soluta excepturi saepe similique officia impedit aliquam hic ea consequuntur magnam nulla fuga ab
+        quam exercitationem repellendus ullam enim reprehenderit assumenda, cum iusto. Sed nam consectetur harum quis!
+        Ad cum est laudantium totam. Cumque veniam distinctio quia voluptatibus quis! Similique, recusandae nesciunt
+        enim, iure ipsum eum, adipisci totam fugiat consectetur eius delectus nam autem dolores quis eos ex.
+        Rerum qui culpa et minus explicabo. Aut quia nostrum, quo asperiores perferendis suscipit earum, omnis commodi
+        neque recusandae aspernatur id reiciendis. Voluptatibus, quos. Dolorum cupiditate, eos ea laboriosam nobis ut.
+        Corrupti, tempora facilis repellat necessitatibus quibusdam cupiditate reiciendis nobis, distinctio provident
+        officiis impedit optio beatae sed quas iste ipsa error sapiente similique deleniti laboriosam recusandae sunt a
+        vel. Repellat, dolore!
+        Qui quidem architecto vel culpa soluta animi dignissimos non voluptatibus libero tempora dolore, aliquam
+        consequatur iure. Quo vero, provident explicabo totam reprehenderit, ab sapiente incidunt nam animi maiores id
+        perspiciatis.
+        Tempora vitae architecto, est consectetur nobis, soluta molestias voluptatum voluptatibus quo odio eos
+        reiciendis corrupti mollitia sequi quasi, debitis inventore odit minima magnam unde nostrum magni aperiam iure.
+        Doloribus, earum?
+        Sit commodi optio ullam esse mollitia nam ad in voluptate. Deserunt excepturi rerum voluptas. Deleniti pariatur
+        minima, tempore corrupti adipisci, beatae excepturi molestiae dolor animi minus magnam totam, quia reiciendis!
+        Porro quia inventore sed numquam? Sit ad ducimus maiores laboriosam corrupti, explicabo nisi molestiae pariatur
+        alias minus voluptatem amet accusantium dicta facilis. Voluptates, labore! Eius aliquid doloribus consequuntur
+        quae consequatur?
+        Facilis hic error id. Consequatur aspernatur repellat possimus dolor velit architecto consectetur. Ad harum eum
+        animi magni fugit consequatur, beatae recusandae expedita! Quia illum ab expedita incidunt maxime sit aperiam.
+        Nemo doloremque libero, reprehenderit at sit laborum excepturi animi consequuntur tenetur corporis saepe
+        reiciendis sint provident facere aperiam architecto hic officiis ipsa velit numquam quas deserunt beatae error.
+        Animi, mollitia?
+        Neque magni doloremque minima rem eos recusandae harum quam sint nemo temporibus pariatur voluptates maiores,
+        eligendi iusto? Numquam minus iure sunt, eius aliquam, dolorem id et, itaque quas pariatur illo?
+        Laborum sunt veritatis inventore animi eligendi possimus facere eum quia ullam officia consectetur doloribus ea
+        libero ab, fugit quidem labore corporis dolor quam ipsam mollitia nulla! Sit voluptatum totam autem.
+        Neque, tempora! Officia, unde omnis in cumque praesentium dicta incidunt sit facere nemo voluptatem consectetur
+        distinctio suscipit quibusdam similique, adipisci necessitatibus obcaecati expedita reiciendis reprehenderit
+        iusto cupiditate facilis nostrum alias.
+        Labore obcaecati perferendis beatae explicabo animi nam, rem veritatis ad ab alias similique aperiam dolorem
+        sint tempora, minus in vel sunt quasi perspiciatis, cumque a distinctio ipsam illo? Dicta, fugiat?
+        Enim sunt illum ab. Suscipit, expedita accusantium harum facilis ducimus nemo voluptatum! Laborum at aliquid,
+        sed doloremque quae velit explicabo quo, deserunt iste omnis inventore, vel corporis dignissimos nesciunt
+        atque!
+        Vero officia, dignissimos maiores accusamus laudantium exercitationem. Enim, quisquam? Quis et, officia numquam
+        itaque, explicabo voluptates cum commodi animi error aliquid nesciunt harum! Exercitationem reiciendis totam,
+        quas incidunt id praesentium.
+        Illo laudantium dolores, rerum recusandae sed commodi quis adipisci placeat tenetur dolore consequuntur est
+        eaque maiores qui! Nemo a laborum voluptatibus, atque, perspiciatis placeat id numquam asperiores minus
+        suscipit aspernatur.
+        Dolorum dicta est magni laudantium, voluptates expedita esse architecto eligendi aperiam ipsam provident maxime
+        quas, eaque atque optio officiis consequuntur inventore excepturi eius facilis laboriosam omnis id ducimus?
+        Maxime, sit!
+        Earum excepturi nulla dolorum debitis deleniti aspernatur vitae qui reprehenderit inventore odio labore
+        facilis, consequatur quod ad? Cumque, quaerat. Doloremque ipsum adipisci laboriosam saepe quidem praesentium
+        possimus aperiam esse. Sit!
+        Dignissimos perferendis quia rem nobis officiis quaerat, sequi modi! Id incidunt architecto et, dignissimos
+        vero corrupti, voluptas fuga exercitationem veritatis voluptatibus mollitia voluptatum, ipsum tenetur?
+        Molestias dolores consectetur nisi vero!
+        Excepturi sed incidunt, nesciunt omnis blanditiis autem optio officiis fuga ex ipsum, possimus magnam quod
+        distinctio laudantium corporis voluptatibus nam aliquam quia nostrum quaerat qui! Dicta modi sit placeat
+        recusandae!
+        Magni sint earum voluptatum nesciunt repellat facilis beatae tempore deleniti quia molestias, pariatur officia
+        rem tempora. Quasi corporis dicta quis explicabo id provident iste itaque dolores, hic, excepturi odit iure!
+        Debitis sunt sed perferendis dolores, vel a distinctio earum reprehenderit facilis, nesciunt, tenetur omnis
+        eius nihil recusandae. Ea debitis, necessitatibus rem dolor quasi, numquam iure, aliquam maxime illo cum
+        blanditiis.
+    </h3>
 </body>
+
 </html>
