added deploy for s

--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
 
     <nav class='nav-bar'>
 
-        <h3 class='nav-bar-title'></h3>
+        <h3 class='nav-bar-title'>
+            <img class='logo'src="./M_Logo.png" alt="">
+        </h3>
         <ul class='nav-links'>
             <li><a href="#featured">Projects</a></li>
             <li><a href="./Melissa Arrington's Resume April 18 .docx (10).pdf">Resume</a></li>
-            <li><a href="#">Contact</a></li>
+            
         </ul>
 
     </nav>
@@ -111,7 +113,7 @@
                                 
                         </div>
                         <div mdl-card__actions class="project-links">
-                            <a class='project-link'href="https://salty-lowlands-92993.herokuapp.com/">Live Demo</a>
+                            <a class='project-link'href="https://jolly-jang-4526cd.netlify.com">Live Demo</a>
                             <a class='project-link' href="https://github.com/melissaarrington1/Simon">GitHub</a>
                         </div>
                     </div>
