making additional changes

--- a/index.html
+++ b/index.html
@@ -84,11 +84,12 @@
                         <div class="mdl-card__supporting-text">
                             <p>The Tea Tree is a resource for tea enthusiasts.</p>
                             <p>Login to your personal "Tea Tree" to select a type of tea, and save it to your
-                                collection.</p>
+                                collection. I am currently refactoring this entire app, replacing Handlebars with React.</p>
                                 <span class="project-skill">HTML5</span>
                                 <span class="project-skill">CSS3</span>
                                 <span class="project-skill">Node.js</span>
                                 <span class="project-skill">Handlebars</span>
+                                <span class="project-skill">React</span>
                         </div>
                         <div mdl-card__actions class="project-links">
 <a class='project-link'href="https://salty-lowlands-92993.herokuapp.com/">Live Demo</a>
@@ -104,9 +105,8 @@
                             <h2 class="mdl-card__title-text">Simon!</h2>
                         </div>
                         <div class="mdl-card__supporting-text">
-                            <p>The Tea Tree is a resource for tea enthusiasts.</p>
-                            <p>Login to your personal "Tea Tree" to select a type of tea, and save it to your
-                                collection.</p>
+                            <p>Play the classic family game, Simon!</p>
+                            <p>Simon was made using vanilla JavaScript. In the future, I plan to implement a score keeper.</p>
                                 <span class="project-skill">HTML5</span>
                                 <span class="project-skill">CSS3</span>
                                 <span class="project-skill">JavaScript</span>
@@ -130,9 +130,8 @@
                             <h2 class="mdl-card__title-text">The Furry Hotel</h2>
                         </div>
                         <div class="mdl-card__supporting-text">
-                            <p>The Tea Tree is a resource for tea enthusiasts.</p>
-                            <p>Login to your personal "Tea Tree" to select a type of tea, and save it to your
-                                collection.</p>
+                            <p>Need boarding for your pet? Bring your pets to the Furry Hotel!</p>
+                            <p>The Furry Hotel was a personal project, that implements JavaScript and the Google Maps API.</p>
                                 <span class="project-skill">HTML5</span>
                                 <span class="project-skill">CSS3</span>
                                 <span class="project-skill">JavaScript</span>
@@ -153,9 +152,8 @@
                             <h2 class="mdl-card__title-text">Swoosh!</h2>
                         </div>
                         <div class="mdl-card__supporting-text">
-                            <p>The Tea Tree is a resource for tea enthusiasts.</p>
-                            <p>Login to your personal "Tea Tree" to select a type of tea, and save it to your
-                                collection.</p>
+                            <p></p>
+                            <p>Swoosh was made for a volunteer hackathon. It implements the SportsDataIO API, which renders NBA stats and player information.</p>
                                 <span class="project-skill">HTML5</span>
                                 <span class="project-skill">CSS3</span>
                                 <span class="project-skill">Node.js</span>
