changes to media query

--- a/index.html
+++ b/index.html
@@ -85,11 +85,13 @@
                             <p>The Tea Tree is a resource for tea enthusiasts.</p>
                             <p>Login to your personal "Tea Tree" to select a type of tea, and save it to your
                                 collection. I am currently refactoring this entire app, replacing Handlebars with React.</p>
+                            <div class="project-skill-links">
                                 <span class="project-skill">HTML5</span>
                                 <span class="project-skill">CSS3</span>
                                 <span class="project-skill">Node.js</span>
                                 <span class="project-skill">Handlebars</span>
                                 <span class="project-skill">React</span>
+                            </div>
                         </div>
                         <div mdl-card__actions class="project-links">
 <a class='project-link'href="https://salty-lowlands-92993.herokuapp.com/">Live Demo</a>
