added cute little arrow animation

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <h2 class="sub-header">An ambitious and fun full stack <span>web developer</span>, with a knack for research, and a
                     specialty in beautifully minimalistic <span>design</span>.</h2>
                 
-                <a href="#skills"><span><i class="fas fa-chevron-down"></i></span></a>
+                <a href="#skills"><span><i class="arrow fas fa-chevron-down"></i></span></a>
             </div>
         </section>
         <section class="skills-area" id="skills">
