--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
 
 <body>
     <!-- <nav class='nav-bar'>
-        <h3 class='nav-bar-title'>
-            <img class='logo' src="./M_Logo.png" alt="">
-        </h3>
+
         <ul class='nav-links'>
             <li><a href="#featured">Projects</a></li>
             <li><a href="./Melissa Arrington's Resume April 18 .docx (1).pdf">Resume</a></li>
@@ -31,7 +29,12 @@
     </nav> -->
     <main>
         <section class='greeting-area'>
+
             <div class='greeting-text'>
+                <div class='nav-link-icons'>
+                    <i class="fab fa-github"></i>
+                    <i class="fab fa-linkedin-in"></i>
+                </div>
                 <h1 class='greeting-text-header'><span>
                         < Melissa Arrington /></span> </h1>
                 <p class='header-paragraph'>Developer.</p>
