--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
 
             <div class='greeting-text'>
                 <div class='nav-link-icons'>
-                    <i class="fab fa-github"></i>
-                    <i class="fab fa-linkedin-in"></i>
+                    <a href=""><i class="fab fa-github"></i></a>
+
+                    <a href=""><i class="fab fa-linkedin-in"></i></a>
+
                 </div>
                 <h1 class='greeting-text-header'><span>
                         < Melissa Arrington /></span> </h1>
